# broom-bot

./: .clang-format  .env.example  .env.sample  .gitignore  .gitmodules  ARCHITECTURE.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  architecture.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build.yml  dpp-check.yml  release.yml
docs/: bulk-message-processing.md
include/broom_bot/app/: app.h
include/broom_bot/bot/: commands.h
include/broom_bot/config/: json_config.h
src/: main.cpp
src/app/: app.cpp
src/bot/: commands.cpp
src/commands/: about.cpp  about.hpp  all_commands.cpp  all_commands.hpp  avatar.cpp  avatar.hpp  channelinfo.cpp  channelinfo.hpp  choose.cpp  choose.hpp  coinflip.cpp  coinflip.hpp  eightball.cpp  eightball.hpp  eightball_answers.hpp  embeds.hpp  emojiinfo.cpp  emojiinfo.hpp  help.cpp  help.hpp  info_format.hpp  jobs.cpp  jobs.hpp  options.hpp  pagination.hpp  ping.cpp  ping.hpp  purge.cpp  purge.hpp  purge_filter.hpp  remind.cpp  remind.hpp  remind_rules.hpp  roleinfo.cpp  roleinfo.hpp  roll.cpp  roll.hpp  schedule.cpp  schedule.hpp  serverinfo.cpp  (+5 more)
src/config/: json_config.cpp
src/core/: backup.cpp  backup.hpp  catalog.hpp  command.hpp  config.cpp  config.hpp  db.cpp  db.hpp  duration.hpp  jobs.cpp  jobs.hpp  logging.cpp  logging.hpp  metrics.hpp  registry.cpp  registry.hpp  rest_await.hpp  rng.hpp  services.hpp  timeparse.hpp
tests/: test_duration.cpp  test_info_format.cpp  test_pagination.cpp  test_purge_filter.cpp  test_remind_rules.cpp  test_timeparse.cpp
